update routes and create new routes
